--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">My First App</string>
-    <string name="edit_message">Enter a message</string>
-    <string name="button_send">Send</string>
+    <string name="app_name">Sara\'s Compass App</string>
+    <string name="button_values">Sensor values</string>
+    <string name="button_compass">Compass</string>
+    <string name="title_values">Sensor values</string>
+    <string name="title_compass">Compass</string>
 </resources>
